--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script>
       window.$docsify = {
         logo: 'Web/logo-icononly.svg',
-        name: 'Syllabus Template',
+        name: 'SPD-2.3-Onboarding',
         repo: 'Make-School-Courses/SPD-2.3-Onboarding',
         themeColor: '#126893',
         formatUpdated: '{MM}/{DD} {HH}:{mm}',
